# deepagents

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release-please-manifest.json  00_STATE.md  01_REPO_MAP.md  05_PR_CANDIDATES.md  06_SELECTED_5_PR_PLAN.md  ACTION.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION.md  DEPENDENCY_ANALYSIS.md  DEVELOPMENT.md  Dockerfile  FORK-CUSTOMIZATIONS.md  IMPLEMENTATION_SUMMARY_MCP.md  Makefile  OLLAMA.md  README.md  REMOTE_EXECUTION_RESEARCH_REPORT.md  ReadmeDev.md  SKILL.md  THREAT_MODEL.md  action.yml  agent_with_runloop_backend.ipynb  bench_perf_combo.py  bench_results.json  commit_message.txt  deepagents-deploy.md  docker-compose.yml  flame_openai.speedscope.json  flame_openai_trace.speedscope.json  index.html  langgraph.json  profile_openai_agent.py  (+14 more)
deepagents-mcp/: README.md  deepagents-mcp-diagram.md  pyproject.toml
deepagents-mcp/examples/: deepagents_with_mcp.py  math_server.py  mcp_config.json.example  tool_discovery_demo.py
deepagents-mcp/src/deepagents_mcp/: __init__.py  consent.py  http_transport.py  initialization.py  jsonrpc_validation.py  mcp_client.py  security.py  transport_security.py  validation.py
deepagents-mcp/tests/: test_initialization.py
examples/better-harness/: README.md  pyproject.toml
examples/better-harness/better_harness/: __init__.py  agent.py  core.py  optimize.py  runner.py  runners.py  traces.py  workspace.py
examples/better-harness/examples/: cases.toml  deepagents_example.toml  deepagents_harness.py
examples/better-harness/skills/: harness-optimizer.md
examples/better-harness/tests/: test_better_harness.py
examples/content-builder-agent/: .gitignore  ImproveQuery.md  ImproveQueryPlan.md  ImproveQueryTaskList.md  README.md  agentsLogfile.txt  content_writer.py  pyproject.toml  subagents.yaml
examples/content-builder-agent/tests/: test_search_helpers.py
examples/ecommerce_agent/: .gitignore  QUICKSTART.md  README.md  SKILLS_README.md  pyproject.toml  test_agent.py  test_skills.py
examples/ecommerce_agent/backend/: __init__.py  config.py  main.py
examples/ecommerce_agent/frontend/: index.html  package-lock.json  package.json
examples/ecommerce_agent/im_gateway/: __init__.py
examples/ecommerce_agent/screenshots/: README.md
examples/ecommerce_agent/scripts/: build.py
examples/github-pr-review/: .env.example  .gitignore  README.md  pyproject.toml  server.py
examples/github-pr-review/pr_review_agent/: __init__.py  agent.py  github_client.py  prompts.py  state.py  storage.py  tools.py  webhook.py
examples/langchain-browserbase/: .env.example  README.md  browser_tools.py  main.py  pyproject.toml
examples/langchain-browserbase/tests/: test_browser_tools.py
examples/langsmith-sandbox-agent/: .env.example  Dockerfile  README.md  agent.py  pyproject.toml  run_in_sandbox.py
examples/langsmith-sandbox-agent/task/: solution.py  test_solution.py
examples/mcp_tools_integration/: .env.example  AGENTS.md  README.md  __init__.py  example_agent.py  mcp_tools.py  pyproject.toml  router_agent.py  test_arxiv.py
examples/mcp_tools_integration/mcp_tools/: __init__.py  _utils.py
examples/memory-backed-agent/: README.md  deploy_memory_backed_agent.py  pyproject.toml
examples/muapi-creative-agent/: AGENTS.md  README.md  creative_agent.py  pyproject.toml  subagents.yaml
examples/parallel_subagents/: README.md  agent.py  langgraph.json  pyproject.toml
examples/persistent-memory-assistant/: README.md  assistant.py  pyproject.toml
examples/pi-profile/: .gitignore  README.md  pyproject.toml
examples/pi-profile/pi_profile/: __init__.py  profile.py
examples/pi-profile/tests/: test_profile.py
examples/queue-lookahead/: agent.py  pyproject.toml  test_client.py
examples/repl_swarm/: README.md  pyproject.toml  swarm_agent.py
examples/rlm-bench/: .env.example  AGENTS.md  README.md  pyproject.toml  run_benchmark.py
examples/rlm-bench/benchmarks/: browsecomp.py  oolong.py  s_niah.py
examples/rlm_agent/: README.md  pyproject.toml  rlm_agent.py
examples/slide-creator/: .gitignore  README.md  app.py  cli.py  pyproject.toml
examples/slide-creator/slide_creator/: __init__.py  image_gen.py  slideshow.py
examples/slide-creator/static/: app.js  index.html  style.css
examples/swarm-part-2/: README.md  agent.py  pyproject.toml
examples/swarm-part-2/output/: companies.txt
examples/swarm-simple/: agent.py  pyproject.toml
examples/topic-wiki-runner/: README.md  ingest.py  init.py  lint.py  models.py  pyproject.toml  query.py  topic_wiki_helpers.py  topic_wiki_runner.py  wiki_helpers.py  wiki_ingest.py  wiki_init.py  wiki_runner.py
examples/vercel-sandbox-production/: .env.example  README.md  agent.py  bake_snapshot.py  network_policy.py  pyproject.toml
examples/vercel-sandbox-production/tests/: test_example.py
examples/whatsapp-channel/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  mcp_tools.py  pyproject.toml  speech.py  tools.py  whatsapp_adapter.py
examples/whatsapp-channel/bridge/: bridge.js  package.json
examples/whatsapp-channel/cron/: __init__.py  jobs.py  scheduler.py  tools.py
examples/whatsapp-channel/tests/: conftest.py  (+4 more)
examples/wiki-runner/: README.md  helpers.py  ingest.py  init.py  lint.py  models.py  pyproject.toml  query.py  runner.py  wiki_helpers.py
langgraph_server_demo/: .env.example  README.md  client_example.py  langgraph.json  pyproject.toml  run.sh  server.py
libs/browser/: Makefile  README.md  pyproject.toml
libs/chatlas-agents/: .env.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SANDBOX.md  SETUP.md  docker-compose.yml  langgraph.json  lxplus_setup.sh  pyproject.toml  requirements.txt  setup.py
libs/deepagents-repl/: Makefile  README.md  SKILL_BUNDLES_SPEC.md  pyproject.toml
meta-agent-builder/: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
meta-agent-builder/examples/: mvp_example.py
meta-agent-builder/meta_agent_builder/: __init__.py
(+3711 files in other folders)
