[project]
name = "better-harness"
version = "0.2.0"
description = "Optimize an agent harness with an outer Deep Agent loop + local trace capture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.0",
]

[project.scripts]
better-harness = "better_harness.optimize:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["better_harness*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".runtime/**", "runs/**", "examples/**"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "C901",
    "COM812",
    "D",
    "E501",
    "EM102",
    "ISC001",
    "PERF401",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "Q000",
    "S314",
    "S603",
    "S607",
    "TC001",
    "TC003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN001", "ANN201", "TC002", "TC003", "ARG001"]
"better_harness/optimize.py" = ["T201"]
"better_harness/agent.py" = ["PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
