[project]
name = "ecommerce_agent"
version = "0.1.0"
description = "多平台电商Agent系统 - 基于DeepAgents"
requires-python = ">=3.10"
dependencies = [
    "deepagents>=0.3.5,<0.4.0",
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "playwright>=1.48.0,<1.49.0",
    "playwright-stealth>=1.0.0,<2.0.0",
    "chromadb>=0.5.15,<0.6.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.12,<0.0.13",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "cryptography>=43.0.0,<44.0.0",
    "websockets>=13.1,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.7.0,<0.8.0",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.11.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.7.0,<0.8.0",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.11.0,<2.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
