[project]
name = "langchain-browserbase-deepagent"
version = "0.1.0"
description = "Browserbase-backed LangChain Deep Agents example with search, fetch, rendered extraction, and human-reviewed interactive actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.0,<5.0.0",
    "browserbase>=1.8.0,<2.0.0",
    "deepagents>=0.5.3,<0.6.0",
    "langchain-openai>=1.1.14,<2.0.0",
    "langgraph>=1.0.6,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "stagehand>=0.3.0,<1.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.12.2,<0.16.0",
]

[project.urls]
Repository = "https://github.com/langchain-ai/deepagents/tree/main/examples/langchain-browserbase"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["browser_tools", "main"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Example code handles SDK payloads with dynamic shapes.
    "COM812",  # Trailing comma missing conflicts with the formatter.
    "D100",    # Example modules are documented in the README.
    "D103",    # Tool functions keep short LangChain-facing docstrings.
    "FBT001",  # LangChain tools expose boolean args naturally in schemas.
    "FBT002",  # LangChain tools expose boolean defaults naturally in schemas.
    "INP001",  # Example files and tests are top-level scripts.
    "PERF401", # Explicit loop keeps Browserbase response parsing readable.
    "PLR0911", # Normalizing unknown SDK objects is clearer with early returns.
    "T201",    # The CLI intentionally prints pending approvals and results.
    "TC003",   # Runtime imports keep script-style type hints straightforward.
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D101",  # Test helper class does not need a public docstring.
    "D102",  # Test helper method does not need a public docstring.
    "S101",  # Pytest assertions are expected.
]
