[project]
name = "queue-lookahead-example"
version = "0.1.0"
description = "Example for testing QueueLookaheadMiddleware with langgraph dev"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.5",
    "langgraph>=1.0.6",
    "langgraph-sdk>=0.3.11",
]

[tool.setuptools]
py-modules = ["agent"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
