[project]
name = "swarm-part-2-example"
version = "0.1.0"
description = "Swarm part 2 example with web research subagents and skill-based fan-out"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.6",
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.0",
    "langchain-quickjs",
    "markdownify>=1.2.0",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }
langchain-quickjs = { path = "../../libs/partners/quickjs", editable = true }
