[project]
name = "swarm-simple-example"
version = "0.1.0"
description = "Minimal swarm agent: agent reads skill scripts and synthesizes its own eval code"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.6",
    "langchain-anthropic>=0.3.0",
    "langchain-quickjs",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }
langchain-quickjs = { path = "../../libs/partners/quickjs", editable = true }
