[project]
name = "topic-wiki-runner-example"
version = "0.1.0"
description = "Topic wiki runner using DeepAgents + LangSmith CLI"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.7",
    "langsmith[sandbox]>=0.8.0",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }
