[project]
name = "vercel-sandbox-production-example"
version = "0.1.0"
description = "Production patterns for running a Deep Agent on Vercel Sandbox: snapshots, deny-by-default network policy with credential brokering, and per-thread sandbox lifecycle."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8,<0.7.0",
    "langchain-vercel-sandbox>=0.0.1,<0.1.0",
    "langchain>=1.3.10,<2.0.0",
    "langchain-anthropic>=1.4.6,<2.0.0",
    "vercel>=0.5.6,<0.6",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
test = [
    "pytest>=9.0.3,<10.0.0",
]

[project.urls]
Repository = "https://github.com/langchain-ai/deepagents/tree/main/examples/vercel-sandbox-production"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "network_policy", "bake_snapshot"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
