[project]
name = "deepagents-whatsapp-channel"
version = "0.1.0"
description = "WhatsApp channel for Deep Agents via whatsapp-web.js bridge"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.0a2",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.2.11",
    "requests>=2.0.0",
    "markdownify>=0.13.0",
    "tavily-python>=0.7.21",
]

[build-system]
requires = ["setuptools>=73.0.0"]
build-backend = "setuptools.build_meta"
