[project]
name = "deepagents-whatsapp-channel"
version = "0.1.0"
description = "WhatsApp channel for Deep Agents via whatsapp-web.js bridge"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.0a2",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.2.11",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "requests>=2.0.0",
    "markdownify>=0.13.0",
    "tavily-python>=0.7.21",
]

[build-system]
requires = ["setuptools>=73.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cron*"]

[project.optional-dependencies]
speech = [
    "nemo_toolkit[asr]>=2.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
