[project]
name = "wiki-runner-example"
version = "0.1.0"
description = "Wiki runner using DeepAgents + LangSmith CLI"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.1",
    "langsmith[sandbox]>=0.8.0",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }
