[project]
name = "chatlas-agents"
version = "0.1.0"
description = "AI agents for the ChATLAS AI assistant using DeepAgents and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents-cli",
]

[project.scripts]
chatlas = "chatlas_agents.cli:main"
[tool.uv.workspace]
members = [
    "deepagents/libs/deepagents-cli",
]

[tool.uv.sources]
deepagents-cli = { workspace = true, editable = true }
