[project]
name = "chatlas-agents"
version = "0.1.0"
description = "AI agents for the ChATLAS AI assistant using DeepAgents and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents-cli",
    "deepagents",
    "pydantic-settings>=2.12.0",
    "langchain-mcp-adapters>=0.2.1",
    "httpx>=0.28.1",
]

[tool.uv]
package = true

[project.scripts]
chatlas = "chatlas_agents.cli:app"

[tool.uv.workspace]
members = [
    "../deepagents-cli",
    "../deepagents",
    ".",
]

[tool.uv.sources]
deepagents-cli = { workspace = true, editable = true }
deepagents = { workspace = true, editable = true }
chatlas-agents = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "chatlas-agents",
]
