[project]
name = "deepagents-repl"
version = "0.1.0"
description = "Persistent JavaScript REPL middleware for deepagents, backed by quickjs-rs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["deepagents", "langchain", "langgraph", "repl", "javascript", "quickjs", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "deepagents",
    "quickjs-rs",
    "langchain>=1.2.15,<2.0.0",
    "langchain-core>=1.2.27,<2.0.0",
]

# TODO(packaging): before publishing to PyPI, remove the [tool.uv.sources] block
# below and replace it with version pins. The local path assumption only holds
# in the monorepo-style sibling layout used during development.
#
# Note: the upstream repo directory is still named ``quickjs-wasm`` even
# though the package was renamed ``quickjs-rs`` in 0.3 (the path is the
# repo on disk, the package name is what pip/uv installs).
[tool.uv.sources]
deepagents = { path = "../deepagents", editable = true }
quickjs-rs = { path = "../../../quickjs-wasm", editable = true }

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.2,<0.16.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepagents_repl*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
